--- a/index.html
+++ b/index.html
@@ -4,49 +4,52 @@
     <meta charset="UTF-8">
     <title>Bruh Oliveira</title>
 </head>
-<body> <header>
-</header>   
+<body>
+
+<header>
     <h1>Bruh Oliveira</h1>
     <h2><strong>Gestora de projetos</strong> e iniciante na programação</h2>
-    <main></main>
+</header>
+
+<main>
     <section>
-    <img src = "Foto Bruna.jpeg"alt= "Foto da Bruna de perfil, sorrindo"width="200" />
-    <h3>Eu tenho 32 anos, <em>nascida na Bahia</em>, mas criada em SP na qual resido atualmente.</h3>
-     <p>Eu tenho dois cachorros, adoro tudo relacionado a arte e cultura.</p>
-     <p>Minha frase favorita é: <em>Sonhar absurdos e rir alto!</em> É um chamado dos meus antepassados.</p>
-     ><section>
-     <section>
-<h2>O que eu mais gosto de fazer?</h2>
-<ul>
-<li>gerir projetos</li>
-<li>estudar programaçao e inteligencia artificial</li>
-<li>tocar instrumentos de percussao</li>
-<li>assistir filmes e series</li>
-><section>
-<h4>Entre em contato comigo!</h4>
-<form>
-<label for="nome">Nome</label>
-<input type="text"id="nome" name="nome"placeholder="Digite seu nome"/><br
+        <img src="Foto Bruna.jpeg" alt="Foto da Bruna de perfil, sorrindo" width="200" />
+        <h3>Eu tenho 32 anos, <em>nascida na Bahia</em>, mas criada em SP na qual resido atualmente.</h3>
+        <p>Eu tenho dois cachorros, adoro tudo relacionado a arte e cultura.</p>
+        <p>Minha frase favorita é: <em>Sonhar absurdos e rir alto!</em> É um chamado dos meus antepassados.</p>
+    </section>
 
-<label for="e-mail"></label>
-<input type="e-mail"id="e-mail" name="e-mail"placeholder="digite seu e-mail"><br>
+    <section>
+        <h2>O que eu mais gosto de fazer?</h2>
+        <ul>
+            <li>gerir projetos</li>
+            <li>estudar programação e inteligência artificial</li>
+            <li>tocar instrumentos de percussão</li>
+            <li>assistir filmes e séries</li>
+        </ul>
+    </section>
 
-<label for="mensagem">Mensagem: </label>
-<textarea id="mensagem" name="mensagem" placeholder="Escreva sua mensagem" rows="5"></textarea><br
+    <section>
+        <h4>Entre em contato comigo!</h4>
+        <form action="#">
+            <label for="nome">Nome:</label>
+            <input type="text" id="nome" name="nome" placeholder="Digite seu nome"><br>
 
-<button type="submit">Enviar</button>
-</form>
-</ul>
+            <label for="email">E-mail:</label>
+            <input type="email" id="email" name="email" placeholder="Digite seu e-mail"><br>
+
+            <label for="mensagem">Mensagem:</label><br>
+            <textarea id="mensagem" name="mensagem" placeholder="Escreva sua mensagem" rows="5"></textarea><br>
+
+            <button type="submit">Enviar</button>
+        </form>
+    </section>
 </main>
+
 <footer>
-    <a href="https://www.linkedin.com/in/bruna-oliveira-gois/" target="_blank">Link para o meu Linkedlin</a>
-</body>>
+    <a href="https://www.linkedin.com/in/bruna-oliveira-gois/" target="_blank">Link para o meu LinkedIn</a>
+</footer>
+
+</body>
 </html>
-  
-
-
-
-
-
-
 
